--- a/package.json
+++ b/package.json
@@ -1,15 +1,42 @@
 {
-  "name": "mean-template",
+  "name": "kwik-task",
   "version": "0.0.0",
-  "description": "The MEAN Template",
+  "description": "A task manager using AngularJS and NodeJS.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chyld/mean-template"
+    "url": "https://github.com/kadowki/mean-template"
   },
-  "author": "Chyld Medford <chyld.medford@gmail.com>",
+  "author": "David Boling <kadowki@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/chyld/mean-template/issues"
+    "url": "https://github.com/kadowki/mean-template/issues"
   },
-  "homepage": "https://github.com/chyld/mean-template"
+  "homepage": "https://github.com/kadowki/mean-template",
+  "dependencies": {
+    "async": "~0.9.0",
+    "body-parser": "~1.8.1",
+    "express": "~4.9.0",
+    "express-method-override": "0.0.3",
+    "underscore": "~1.7.0",
+    "mongodb": "~1.4.10",
+    "morgan": "~1.3.0",
+    "multiparty": "~3.3.2",
+    "express-session": "~1.8.1",
+    "connect-redis": "~2.1.0",
+    "bcrypt": "~0.8.0",
+    "chalk": "~0.5.1",
+    "request": "~2.42.0"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-jade": "~0.12.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-less": "~0.11.4",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-jscs": "~0.7.1",
+    "grunt-shell": "~1.1.1",
+    "jshint-stylish": "~0.4.0"
+  }
 }
